--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -11,6 +11,22 @@
 	--sub-title-color: #494a4c;
 	--paragraph-color: #494a4c;
 }
+.Error,
+.Success {
+	width: 50%;
+	padding: 0.3em;
+	text-transform: uppercase;
+	color: white;
+	font-weight: bold;
+	text-align: center;
+	font-size: 0.8rem;
+}
+.Error {
+	background-color: red;
+}
+.Success {
+	background-color: green;
+}
 .wrapper {
 	max-width: 1400px;
 	margin-left: auto;
