--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -174,7 +174,7 @@
 	color: var(--primary-color);
 }
 .Form-submit {
-	width: 11rem;
+	width: 12rem;
 	padding: 1em;
 	margin-left: auto;
 	margin-right: auto;
@@ -230,4 +230,12 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+.reset-pwd {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	row-gap: 2em;
 }
