--- a/frontend/src/css/reset.css
+++ b/frontend/src/css/reset.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-:root {
-	--tipo-principal: Helvetica, Arial, sans-serif;
-	--tipo-secundaria: Verdana;
-}
 
 * {
 	margin: 0;
@@ -114,7 +110,7 @@ svg {
 body {
 	min-height: 100vh;
 	font-size: 100%;
-	font-family: var(--tipo-principal);
+	font-family: 'Gotham SSm A';
 	/* opcional */
 	line-height: 1.4em;
 	/* opcional */
