--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -148,7 +148,8 @@
 	box-shadow: var(--box-shadow);
 }
 .Form-email,
-.Form-name {
+.Form-name,
+.Form-date {
 	margin-bottom: 1.4em;
 }
 .Form-password {
@@ -273,7 +274,36 @@
 .Header-link {
 }
 
-.Admin {
-	/* background-color: #ffea9f; */
-	height: 90vh;
+/*LOGIN PATIENTS*/
+.FormLogin {
+	margin-left: auto;
+	margin-right: auto;
+	/* min-width: 50em;
+	max-width: 50em; */
+}
+.Patients {
+	padding: 3em 0 0 0;
+	background-color: #ffea9f;
+	min-height: 90vh;
+	display: grid;
+}
+.Patients-container {
+	padding: 1em;
+	background-color: blueviolet;
+}
+.Patients-add {
+	background-color: turquoise;
+	width: 2em;
+	margin-left: auto;
+	margin-bottom: 1em;
+}
+.Patients-form {
+	padding: 1em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+.Patients-list {
+	background-color: yellowgreen;
 }
