--- a/frontend/src/css/styles.css
+++ b/frontend/src/css/styles.css
@@ -312,10 +312,13 @@
 .Patients-List {
 	background-color: green;
 }
-.Patients-row {
+.Patients-row,
+.Patients-header {
 	background-color: goldenrod;
-	display: flex;
-	justify-content: space-between;
+	/* display: flex;
+	justify-content: space-between; */
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
 	text-align: center;
 	border-bottom: 0.0625rem solid var(--primary-color);
 	border-radius: 0.4em;
@@ -326,10 +329,12 @@
 .Patients-date,
 .Patients-symptoms,
 .Patients-actions {
-	width: 22%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .Patients-name {
-	width: 7%;
+	/* width: 7%; */
 	background-color: #231f20;
 }
 .Patients-owner {
@@ -345,8 +350,15 @@
 	background-color: lightblue;
 }
 .Patients-actions {
-	width: 10%;
+	/* width: 10%; */
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	background-color: turquoise;
+}
+.Patient-edit,
+.Patient-delete {
+	width: 2em;
+}
+.Patient-delete {
+	color: red;
 }
